updated some occurrence tests, now retrieving and deleting occurrence requires a query param for occurrence id, added swagger spec for occurrences
